# personal-ai-employee

./: .env.example  .gitignore  DEPLOYMENT_GUIDE.md  PLATINUM_WORKFLOW.md  README.md  WORKFLOW_QUICK_REFERENCE.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
.claude/: settings.local.json
.claude/commands/: check-status.md  execute-approved.md  linkedin-post.md  linkedin-post.toml  process-inbox.md
.kilocode/workflows/: sp.plan.md
cloud/: Dockerfile  __init__.py  cloud_worker.py  git_sync.py
fb_profile/: Last Browser  Local State
fb_profile/Default/: DIPS  (+6 more)
scripts/: README_LINKEDIN.md  claude_processor.py  find_page_id.py  get_actual_pages.py  get_fb_pages.py  get_fb_token.py  linkedin_post.ps1  linkedin_post.sh  orchestrator.py  post_facebook_api.py  post_facebook_direct.py  post_facebook_fast.py  post_facebook_manual.py  post_facebook_simple.py  post_facebook_v2.py  post_instagram_mobile.py  post_twitter_api.py  post_twitter_api_oauth.py  post_twitter_browser_use.py  post_twitter_final.py  post_twitter_selenium.py  post_twitter_tweepy.py  post_twitter_v2.py  ralph_loop.py  twitter_export_cookies.py  twitter_login_save.py  twitter_manual_cookie.py  twitter_post.py
src/: README.md  __init__.py
test_scripts/: get_gmail_auth_url.py  post_facebook.py  post_instagram.py  post_linkedin.py  post_twitter.py  send_email_simple.py  test_system.py
vault/: .twitter_session.json  Business_Goals.md  Company_Handbook.md  Dashboard.md
watchers/: base_watcher.py  file_watcher.py  gmail_watcher.py  social_media_watcher.py  whatsapp_watcher.py
(+908 files in other folders)
