[project]
name = "ai-employee-hackathon0"
version = "0.1.0"
description = "Personal AI Employee - Autonomous FTE System"
requires-python = ">=3.13"
dependencies = [
    "watchdog>=6.0.0",
    "python-dotenv>=1.0.0",
    "google-api-python-client>=2.189.0",
    "google-auth-oauthlib>=1.2.4",
    "google-auth-httplib2>=0.3.0",
    "playwright>=1.58.0",
    "whatsapp-api-client-python>=0.0.53",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "gitpython>=3.1.0",
]

[project.scripts]
file-watcher = "watchers.file_watcher:main"
orchestrator = "scripts.orchestrator:main"
